--- a/PrijavaQR/PrijavaQR/PrijavaQR.csproj
+++ b/PrijavaQR/PrijavaQR/PrijavaQR.csproj
@@ -13,4 +13,12 @@
     <None Remove="NewFolder\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="wwwroot\css\gitLogo.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Content\" />
+  </ItemGroup>
+
 </Project>
